2002-12-14  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/SerTest.java: Extend SerBase,
	not TestSerBase.

2002-12-13  David J. King  <david_king@softhome.net>

	* gnu/testlet/java/io/CharArrayWriter/BasicTests.java: New test.
	* gnu/testlet/java/io/CharArrayWriter/ProtectedVars.java: New test.

2002-12-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/SerTest.java: New test.
	* gnu/testlet/java/io/ObjectInputOutput/SerBase.java: New helper.

2002-12-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/DataInputStream/ReadStream.java: Add comment
	about copied methods in DataOutputStream tests since braindead Uses
	doesn't handle packages.
	* gnu/testlet/java/io/DataInputStream/ReadStream2.java: Likewise.
	* gnu/testlet/java/io/DataOutputStream/WriteRead.java: Copy method
	from DataInputStream and remove Uses..
	* gnu/testlet/java/io/DataOutputStream/WriteRead2.java: Likewise.

	* gnu/testlet/java/lang/reflect/Method/toString.java: Don't call
	System.out.println().

	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest.java: Use
	harness.debug(e) not e.printStackTrace()

	* gnu/testlet/java/lang/Class/reflect2.java: Use getClass(String) to
	workaround gcj linker issues with inner classes.

2002-12-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/security/SecureRandom/Instance.java: New test.
	* gnu/testlet/java/security/SecureRandom/MauveSecureRandom.java: New
	file.

2002-12-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/ResourceBundle.java: Remove child variant
	tests. Fix check for resource with default Locale en_CA.

2002-12-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/LineNumberReader.java (check): Add test for
	streams containing multiple \r and/or \n following each other.

2002-12-07  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceBase.java (check):
	Add noncanonical flag.